community controller 오류 해결